--- a/ui/src/app/view/port-of-call/port-of-call.component.html
+++ b/ui/src/app/view/port-of-call/port-of-call.component.html
@@ -19,7 +19,7 @@
         </ng-template>
       </p-dropdown>
       <span class="portOfCall__header">{{ 'general.terminal.label' | translate }}</span>
-      <p-dropdown class="portOfCall__dropDown"
+      <p-dropdown  disabled="{{!portOfCall}}" class="portOfCall__dropDown"
                   (onChange)="selectTerminal()"
                   [(ngModel)]="terminal"
                   [filter]="true"
