--- a/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -39,7 +39,7 @@
 <div class="p-fluid p-formgrid p-grid">
   <div class="p-field p-col-12 p-md-4">
     <label for="timestampType">{{ 'general.table.header.timestamp.label' | translate }}: </label>
-    <p-dropdown id="timestampType" styleClass="dropdown" [(ngModel)]="defaultTimestamp.timestampType"
+    <p-dropdown id="timestampType" styleClass="dropdown" [(ngModel)]="timestampSelected"
                 [options]="timestampTypes"></p-dropdown>
   </div>
   <div class="p-field p-col-12 p-md-8">
