P6-138 Store Delay Codes, Recolor timestamps

--- a/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -98,7 +98,7 @@
 
   <div class="p-field p-col-12 p-md-5">
     <label for="delayCode">{{"general.delaycode.label" | translate}}</label>
-    <p-dropdown id="delayCode" [options]="delayCodeOptions" [(ngModel)]="defaultTimestamp.delayCode" [filter]="true"
+    <p-dropdown id="delayCode" [options]="delayCodeOptions" [(ngModel)]="delayCode" [filter]="true"
                 filterBy="label,value.name" [group]="false">
       <ng-template let-delayCode pTemplate="selectedItem">
         <div *ngIf="delayCode.value" class="delayCodeSelectedWrapper">
