P6-138 Aligned to Operations Events

--- a/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -13,9 +13,7 @@
               *ngIf="defaultTimestamp.portOfCall != null"> {{defaultTimestamp.portOfCall.unLocode}} </span>
       </div>
       <div class="p-field p-col-12 p-md-4">
-        <label class="label-compressed"
-               for="CarrierServiceCode">{{'general.transportCall.table.carrierServiceCode.label'| translate}}: </label>
-        <span id="CarrierServiceCode"> {{transportCall.carrierServiceCode}} </span>
+        <!-- Placeholder for additional information -->
       </div>
       <div class="p-field p-col-12 p-md-4">
         <label class="label-compressed" for="vesselIMO">{{'general.transportCall.table.vesselImo.label'| translate}}
@@ -28,10 +26,7 @@
           ({{defaultTimestamp.terminal.terminalName}})</span>
       </div>
       <div class="p-field p-col-12 p-md-4">
-        <label class="label-compressed"
-               for="CarrierVoyageNumber">{{'general.transportCall.table.carrierVoyageNumber.label'| translate}}
-          : </label>
-        <span id="CarrierVoyageNumber"> {{transportCall.carrierVoyageNumber}}</span>
+        <!-- Placeholder for additional information -->
       </div>
     </div>
   </p-card>
