P6-138 Take over publisher and set Messageing Direction

--- a/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -1,4 +1,4 @@
-<h4>For Transport-Call {{ transportCall.transportCallID}}</h4>
+<h4>For Transport-Call {{ transportCall.transportCallSequenceNumber}}</h4>
 <div class="headline">
   <p-card styleClass="card-scondary">
     <div class="p-fluid p-formgrid p-grid">
