--- a/ui/src/app/view/timestamp-table/timestamp-table.component.html
+++ b/ui/src/app/view/timestamp-table/timestamp-table.component.html
@@ -16,7 +16,7 @@
         : {{transportCallSelected.transportCallID}}</div>
       <div class="p-col tableHeader">
         <div class="tableHeader__buttons">
-          <p-button class="p-button-raised p-button-rounded tableHeader__add_button" (onClick)="showCreationDialog()"
+          <p-button class="p-button-raised p-button-rounded tableHeader__add_button" (onClick)="openCreationDialog()"
                     icon="pi pi-plus" pTooltip="{{ 'general.table.header.create.tooltip' | translate }}"
                     tooltipPosition="left" type="button"
                     tooltipStyleClass="ToolTipClass"></p-button>
