--- a/ui/src/app/view/transport-calls-table/transport-calls-table.component.html
+++ b/ui/src/app/view/transport-calls-table/transport-calls-table.component.html
@@ -9,7 +9,7 @@
       </div>
       <div class="p-col tableHeader">
         <div class="tableHeader__buttons">
-          <p-button class="p-button-raised p-button-rounded tableHeader__add_button"
+          <p-button (onClick)="openCreationDialog()" class="p-button-raised p-button-rounded tableHeader__add_button"
                     icon="pi pi-plus" pTooltip="{{ 'general.transportCall.create.tooltip' | translate }}"
                     tooltipPosition="top" type="button"
                     tooltipStyleClass="ToolTipClass"></p-button>
@@ -57,3 +57,7 @@
     </tr>
   </ng-template>
 </p-table>
+
+
+<p-toast key="TransportcallAddSuccess" position="bottom-right"></p-toast>
+<p-toast key="TransportcallAddError" position="bottom-right"></p-toast>
