P6-138 adjusting interface to accept refined tansportCalls

--- a/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -18,7 +18,7 @@
       <div class="p-field p-col-12 p-md-4">
         <label class="label-compressed" for="vesselIMO">{{'general.transportCall.table.vesselImo.label'| translate}}
           : </label>
-        <span id="vesselIMO"> {{transportCall.vesselIMONumber}}</span>
+        <span id="vesselIMO"> {{transportCall.vessel}}</span>
       </div>
       <div class="p-field p-col-12 p-md-4">
         <label class="label-compressed" for="terminal">{{'general.terminal.label'| translate}}: </label>
