P6-138 adjusting interface to accept refined tansportCalls

--- a/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -5,7 +5,7 @@
       <div class="p-field p-col-12 p-md-4">
         <label class="label-compressed" for="vesselName">{{'general.transportCall.table.vesselName.label'| translate}}
           : </label>
-        <span id="vesselName"> {{transportCall.vesselName}} </span>
+        <span id="vesselName"> {{transportCall.vessel.vesselName}} </span>
       </div>
       <div class="p-field p-col-12 p-md-4">
         <label class="label-compressed" for="portOfCall">{{'general.port.ofCall'| translate}}: </label>
