--- a/ui/src/app/view/app.component.html
+++ b/ui/src/app/view/app.component.html
@@ -6,7 +6,7 @@
   <div class="main__spaceInnerComponent, main__spaceBetween" style=" min-width: 1200px">
 
     <div class="main__cards">
-      <app-schedule-selector class="rightSpace fullWidthAndHeight"></app-schedule-selector>
+      <!-- <app-schedule-selector class="rightSpace fullWidthAndHeight"></app-schedule-selector> -->
       <app-port-of-call class="rightSpace fullWidthAndHeight"
                         (portOfCallNotifier)="portOfCallChangedHandler($event)"></app-port-of-call>
       <app-vessel class="fullWidthAndHeight" (vesselNotifier)="vesselChangedHandler($event)"
