--- a/ui/src/app/view/vessel-editor/vessel-editor.component.html
+++ b/ui/src/app/view/vessel-editor/vessel-editor.component.html
@@ -3,7 +3,7 @@
     <div class="p-field p-grid">
       <label for="name" class="p-col-12 p-mb-2 p-md-2 p-mb-md-0">{{ 'general.vessel.name' | translate }}</label>
       <div class="p-col-12 p-md-10">
-        <input id="name" type="text" formControlName="name" pInputText [(ngModel)]=vessel.name maxlength="100">
+        <input id="name" type="text" formControlName="name" pInputText [(ngModel)]=vessel.vesselName maxlength="100">
         <span *ngIf="vesselFormGroup.get('name').hasError('maxlength')" class="p-invalid">{{ 'general.vessel.validation.name.length.max' | translate }}</span>
         <span *ngIf="vesselFormGroup.get('name').hasError('minlength')" class="p-invalid">{{ 'general.vessel.validation.name.length.min' | translate }}</span>
         <span *ngIf="vesselFormGroup.get('name').hasError('required') && vesselFormGroup.get('name').touched" class="p-invalid">
@@ -14,36 +14,48 @@
     <div class="p-field p-grid">
       <label for="imo" class="p-col-12 p-mb-2 p-md-2 p-mb-md-0">{{ 'general.vessel.number' | translate }}</label>
       <div class="p-col-12 p-md-10">
-        <input id="imo" type="text" formControlName="imo" pInputText [(ngModel)]=vessel.imo maxlength="7">
-        <span *ngIf="vesselFormGroup.get('imo').hasError('required') && vesselFormGroup.get('imo').touched" class="p-invalid">
+        <input id="imo" type="text" formControlName="imoId" pInputText [(ngModel)]=vessel.vesselIMONumber maxlength="70">
+        <span *ngIf="vesselFormGroup.get('imoId').hasError('required') && vesselFormGroup.get('imoId').touched" class="p-invalid">
           {{ 'general.vessel.validation.number.empty' | translate }}
         </span>
-        <span *ngIf="vesselFormGroup.get('imo').hasError('pattern')" class="p-invalid">
-          {{ 'general.vessel.validation.number.min' | translate }}
+        <span *ngIf="vesselFormGroup.get('imoId').hasError('pattern')" class="p-invalid">
+          {{ 'general.vessel.validation.number.length.min' | translate }}
         </span>
-        <span *ngIf="vesselFormGroup.get('imo').hasError('maxlength')" class="p-invalid">
-          {{ 'general.vessel.validation.number.max' | translate }}
-        </span>
-      </div>
-    </div>
-    <div class="p-field p-grid">
-      <label for="teu" class="p-col-12 p-mb-2 p-md-2 p-mb-md-0">{{ 'general.vessel.size' | translate }}</label>
-      <div class="p-col-12 p-md-10">
-        <p-inputNumber id="teu" mode="decimal" formControlName="teu" [(ngModel)]=vessel.teu></p-inputNumber>
-        <span *ngIf="vesselFormGroup.get('teu').hasError('required') && vesselFormGroup.get('teu').touched" class="p-invalid">
-          {{ 'general.vessel.validation.size.empty' | translate }}
-        </span>
-        <span *ngIf="vesselFormGroup.get('teu').hasError('max')" class="p-invalid">
-          {{ 'general.vessel.validation.size.max.number' | translate }}
+        <span *ngIf="vesselFormGroup.get('imoId').hasError('maxlength')" class="p-invalid">
+          {{ 'general.vessel.validation.number.length.max' | translate }}
         </span>
       </div>
     </div>
     <div class="p-field p-grid">
-      <label for="serviceName" class="p-col-12 p-mb-2 p-md-2 p-mb-md-0">{{ 'general.vessel.serviceName' | translate }}</label>
+      <label for="callSignNumber" class="p-col-12 p-mb-2 p-md-2 p-mb-md-0">{{ 'general.vessel.callSignNumber' | translate }}</label>
       <div class="p-col-12 p-md-10">
-        <input id="serviceName" type="text" formControlName="serviceNameCode" pInputText [(ngModel)]=vessel.serviceNameCode>
-        <span *ngIf="vesselFormGroup.get('serviceNameCode').hasError('maxlength')" class="p-invalid">
+        <p-inputNumber id="callSignNumber" mode="decimal" formControlName="callSignNumber" [(ngModel)]=vessel.vesselCallSignNumber></p-inputNumber>
+        <span *ngIf="vesselFormGroup.get('callSignNumber').hasError('required') && vesselFormGroup.get('callSignNumber').touched" class="p-invalid">
+          {{ 'general.vessel.validation.callSignNumber.empty' | translate }}
+        </span>
+        <span *ngIf="vesselFormGroup.get('callSignNumber').hasError('max')" class="p-invalid">
+          {{ 'general.vessel.validation.callSignNumber.length.max' | translate }}
+        </span>
+      </div>
+    </div>
+    <div class="p-field p-grid">
+      <label for="operatorCarrierID" class="p-col-12 p-mb-2 p-md-2 p-mb-md-0">{{ 'general.vessel.operatorCarrierID' | translate }}</label>
+      <div class="p-col-12 p-md-10">
+        <input id="operatorCarrierID" type="text" formControlName="operatorCarrierID" pInputText [(ngModel)]=vessel.vesselOperatorCarrierID>
+        <span *ngIf="vesselFormGroup.get('operatorCarrierID').hasError('maxlength')" class="p-invalid">
           {{ 'general.vessel.validation.size.max.length' | translate }}
+        </span>
+      </div>
+    </div>
+    <div class="p-field p-grid">
+      <label for="flag" class="p-col-12 p-mb-2 p-md-2 p-mb-md-0">{{ 'general.vessel.flag' | translate }}</label>
+      <div class="p-col-12 p-md-10">
+        <input id="flag" type="text" formControlName="flag" pInputText [(ngModel)]=vessel.vesselFlag>
+        <span *ngIf="vesselFormGroup.get('flag').hasError('maxlength')" class="p-invalid">
+          {{ 'general.vessel.validation.flag.length' | translate }}
+        </span>
+        <span *ngIf="vesselFormGroup.get('flag').hasError('minlength')" class="p-invalid">
+          {{ 'general.vessel.validation.flag.length' | translate }}
         </span>
       </div>
     </div>
